# enumflags2

./: .mailmap  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: from_iterator.rs
benchmarks/: Cargo.toml  iterator.rs
enumflags/: Cargo.toml  README.md
enumflags/src/: ext.rs  fallible.rs  formatting.rs  lib.rs  repr.rs
enumflags/tests/: #bitflag_test.rs#  .#bitflag_test.rs
enumflags_derive/: Cargo.toml
enumflags_derive/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
src/: const_api.rs  fallible.rs  formatting.rs  lib.rs
test_suite/: Cargo.toml  common.rs  compile_fail.rs  ui_tests.rs
test_suite/tests/: bitflag_tests.rs  bitflag_tests_2018.rs  formatting.rs  no_implicit_prelude.rs  no_implicit_prelude_2018.rs  no_std.rs  no_std_2018.rs  not_literal.rs  requires_std.rs  serde.rs  zerocopy.rs
test_suite/ui/: invalid_attribute_syntax.rs  invalid_attribute_syntax.stderr  invalid_name_in_default.rs  invalid_name_in_default.stderr  invalid_repr.rs  invalid_repr.stderr  literal_out_of_range.rs  literal_out_of_range.stderr  missing_disciminant.rs  missing_disciminant.stderr  multiple_bits.rs  multiple_bits.stderr  multiple_bits.stderr.nightly  multiple_bits_deferred.rs  multiple_bits_deferred.stderr  multiple_bits_deferred.stderr.nightly  must_use_warning.rs  must_use_warning.stderr  not_enum.rs  not_enum.stderr  not_enum.stderr.nightly  overlapping_flags.rs  overlapping_flags.stderr  shift_out_of_range.rs  shift_out_of_range.stderr  sneaky_make_bitflags.rs  sneaky_make_bitflags.stderr  with_fields.rs  with_fields.stderr  with_generics.rs  with_generics.stderr  zero_disciminant.rs  zero_disciminant.stderr  zero_discriminant_deferred.rs  zero_discriminant_deferred.stderr
