[package]
name = "enumflags2_derive"
version = "0.6.0"
authors = ["maik klein <maikklein@googlemail.com>", "Jakub \"NieDżejkob\" Kądziołka <kuba@kadziolka.net>"]
description = "Do not use directly, use the reexport in the `enumflags2` crate. This allows for better compatibility across versions."
license = "MIT"
repository = "https://github.com/NieDzejkob/enumflags2"
keywords = ["enum", "bitflag", "flag", "bitflags"]

[dependencies]
syn = "^1.0"
quote = "^1.0"
proc-macro2 = "^1.0"

[lib]
proc-macro = true
