[package]
name = "enumflags2_derive"
version = "0.7.4"
authors = ["maik klein <maikklein@googlemail.com>", "Jakub \"NieDżejkob\" Kądziołka <kuba@kadziolka.net>"]
description = "Do not use directly, use the reexport in the `enumflags2` crate. This allows for better compatibility across versions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/NieDzejkob/enumflags2"
keywords = ["enum", "bitflag", "flag", "bitflags"]
edition = "2018"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0", features = ["full"] }
quote = "^1.0"
proc-macro2 = "^1.0"
